--- a/test/WebDAV-Client.Tests/WebDAV-Client.Tests.csproj
+++ b/test/WebDAV-Client.Tests/WebDAV-Client.Tests.csproj
@@ -2,19 +2,11 @@
 
   <PropertyGroup>
     <Authors>Stef Heyenrath</Authors>
-    <TargetFrameworks>net452;netcoreapp1.1;netcoreapp2.1;net6.0;net7.0</TargetFrameworks>
+    <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
     <AssemblyName>WebDAV-Client.Tests</AssemblyName>
     <PackageId>WebDAV-Client.Tests</PackageId>
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Compile Include="..\WebDAV-Client.Tests.Net452\*\*.cs;..\WebDAV-Client.Tests.Net452\*.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Remove="..\WebDAV-Client.Tests.Net452\Properties\AssemblyInfo.cs" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\WebDAV-Client\WebDAV-Client.csproj" />
@@ -28,12 +20,6 @@
     </PackageReference>
     <PackageReference Include="NSubstitute" Version="3.1.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Net.Http" />
   </ItemGroup>
 
 </Project>
